ajustes atualizacao de cobranca
